# FCCSW

./: CMakeLists.txt  basic_huggingface.ipynb  dummy_simulation.py  example_options.py  init.sh
DataObjects/DataObjects/: CaloClusterCollection.h  CaloClusterHandle.h  CaloHitAssociationCollection.h  CaloHitAssociationHandle.h  CaloHitCollection.h  CaloHitHandle.h  EventInfoCollection.h  EventInfoHandle.h  GenJetCollection.h  GenJetHandle.h  GenJetParticleAssociationCollection.h  GenJetParticleAssociationHandle.h  GenVertex.h  GenVertexCollection.h  GenVertexHandle.h  JetCollection.h  JetHandle.h  JetParticleAssociationCollection.h  JetParticleAssociationHandle.h  MCParticle.h  MCParticleAssociationCollection.h  MCParticleAssociationHandle.h  MCParticleCollection.h  MCParticleHandle.h  METCollection.h  METHandle.h  MissingEnergyCollection.h  MissingEnergyHandle.h  ParticleClusterAssociationCollection.h  ParticleClusterAssociationHandle.h  ParticleCollection.h  ParticleHandle.h  ParticleMCAssociationCollection.h  ParticleMCAssociationHandle.h  ParticleTrackAssociationCollection.h  ParticleTrackAssociationHandle.h  SimCaloClusterCollection.h  SimCaloClusterHandle.h  SimCaloClusterHitAssociationCollection.h  SimCaloClusterHitAssociationHandle.h  (+20 more)
DataObjects/dict/: dictionary.h  dictionary.xml
DataObjects/src/: CaloClusterCollection.cc  CaloClusterHandle.cc  CaloHitAssociationCollection.cc  CaloHitAssociationHandle.cc  (+55 more)
Examples/: CMakeLists.txt
FWCore/: CMakeLists.txt
Generation/: CMakeLists.txt
Reconstruction/: CMakeLists.txt
Simulation/: CMakeLists.txt
(+6 files in other folders)
